fixed mailto bug

--- a/src/index.pug
+++ b/src/index.pug
@@ -153,7 +153,7 @@ html
       .contact-wrapper
         h1 Lets build the financial infrastructure of tomorrow
           
-        a(href="mailto:mailto:tai@carapace.finance" class="btn") Contact Us
+        a(href="mailto:tai@carapace.finance" class="btn") Contact Us
 
     +footer()
         
