added sitemap, og image and fixed two issues

--- a/src/components/_header-meta.pug
+++ b/src/components/_header-meta.pug
@@ -5,9 +5,9 @@ mixin headMeta(pathPrefix = './', title = 'Starlings Lab', description = '')
     meta(name="keywords" content="Starlings Lab, Hostel, Hostels in Bir, Hostels in Bir Billing, Hostels near me, Trippy Tribe Hostel, Best Hostels in Bir, Budget Hostels in Bir, Dorms in Bir, Best Hostels in Kasol, Budget Hostels in Kasol, Dorms in Kasol")
 
     meta(property="og:type" content="website")
-    //- meta(property="og:url" content="<website url>/")
+    meta(property="og:url" content="https://starlingslab.com/")
     meta(property='og:description', content=`${description}`)
-    //- meta(property="og:image" content="<website url>/og.png")
+    meta(property="og:image" content="https://starlingslab.com/og.png")
 
     title=title
 
