--- a/src/index.pug
+++ b/src/index.pug
@@ -30,7 +30,7 @@ html
           .row.team-people-wrap
             //- Team member starts | Vip
             .col-lg-4.col-md-4.col-sm-12.col-xs-12
-              a(href="https://github.com/vnadoda" target="_blank") 
+              a(href="https://www.linkedin.com/mwlite/in/vnadoda" target="_blank") 
                 .team-card
                   //- Team member image | Vip
                   .team-member-img
@@ -151,7 +151,7 @@ html
 
     section.contact-section
       .contact-wrapper
-        h1 Lets build the financial infrastructure of tomorrow
+        h1 Let's build the financial infrastructure of tomorrow
           
         a(href="mailto:tai@carapace.finance" class="btn") Contact Us
 
