--- a/src/assets/scss/parts/components/base/_footer.scss
+++ b/src/assets/scss/parts/components/base/_footer.scss
@@ -10,12 +10,31 @@
     padding-bottom: $space;
 
     .footer-logo-wrap {
-      width: 360px;
+      width: 320px;
+      height: 136px;
+      margin-bottom: $space;
+      position: relative;
 
-      p {
-        padding-left: 74px;
-        font-size: 14px;
+      &::after{
+        content: '';
+        width: 100%;
+        height: 100%;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        background-color: transparent;
       }
+
+      img{
+        width: 320px;
+        height: 136px;
+        object-fit: contain;
+        object-position: center;
+      }
+
+      .hidden-text{display: none}
     }
 
     .footer-social-wrap {
@@ -52,9 +71,8 @@
         width: 100%;
         margin-bottom: $space+1;
 
-        p{
-          padding-left: 50px;
-          width: 80%;
+        img{
+          width: 280px;
         }
       }
   
