--- a/src/index.pug
+++ b/src/index.pug
@@ -42,7 +42,7 @@ html
             //- Team member ends | Vip
 
             //- Team member starts | Tai
-            .col-lg-4.col-md-4.col-sm-12.col-xs-12
+            //.col-lg-4.col-md-4.col-sm-12.col-xs-12
               a(href="https://www.linkedin.com/in/taisuke-mino-1529801b4/" target="_blank") 
                 .team-card
                   //- Team member image | Tai
