remove sabnis and change the roles

--- a/src/index.pug
+++ b/src/index.pug
@@ -29,7 +29,7 @@ html
           //- Flexbox row starts
           .row.team-people-wrap
             //- Team member starts | Vip
-            .col-lg-4.col-md-4.col-sm-12.col-xs-12
+            .col-lg-6.col-md-6.col-sm-12.col-xs-12
               a(href="https://www.linkedin.com/mwlite/in/vnadoda" target="_blank") 
                 .team-card
                   //- Team member image | Vip
@@ -38,11 +38,11 @@ html
                   //- Team member description | Vip
                   .team-member-desc
                     p.name Vip
-                    p.designation Founding Engineer
+                    p.designation Co-Founder and the CTO
             //- Team member ends | Vip
 
             //- Team member starts | Tai
-            .col-lg-4.col-md-4.col-sm-12.col-xs-12
+            .col-lg-6.col-md-6.col-sm-12.col-xs-12
               a(href="https://www.linkedin.com/in/taisuke-mino-1529801b4/" target="_blank") 
                 .team-card
                   //- Team member image | Tai
@@ -51,21 +51,9 @@ html
                   //- Team member description | Tai
                   .team-member-desc
                     p.name Tai
-                    p.designation Co-Founder
+                    p.designation Co-Founder and the CEO
             //- Team member ends | Tai
 
-            //- Team member starts | Rohit
-            .col-lg-4.col-md-4.col-sm-12.col-xs-12
-              a(href="https://www.linkedin.com/in/rsabnis/" target="_blank") 
-                .team-card
-                  //- Team member image | Rohit
-                  .team-member-img
-                    img(src="./assets/img/team/rohit.jpeg", alt="")
-                  //- Team member description | Rohit
-                  .team-member-desc
-                    p.name Rohit
-                    p.designation Co-Founder
-            //- Team member starts | Rohit
     //- Team section ends here
 
     //- Investors section starts here
