replace angellist with twitter

--- a/src/components/_footer.pug
+++ b/src/components/_footer.pug
@@ -17,7 +17,7 @@ mixin footer(pathPrefix = './')
             li
               a(href="https://github.com/starlings-lab" target="_blank") GitHub
             li
-              a(href="https://angel.co/company/starlings-lab" target="_blank") Angelist
+              a(href="https://twitter.com/starlings_lab" target="_blank") Twitter
       
       //- Footer Copyright
       .footer-lower-wrapper
