change the headline

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ html
     //- hero section starts
     section.hero-section
       .title-wrapper
-        h1 Building the tools and technology for blockchain technology to help manage credit risks worldwide
+        h1 Building the tools and technology for blockchain technology
         p The core development team supporting the growth and success of the Carapace protocol
     //- hero section ends
 
