--- a/src/index.pug
+++ b/src/index.pug
@@ -29,7 +29,7 @@ html
           //- Flexbox row starts
           .row.team-people-wrap
             //- Team member starts | Vip
-            .col-lg-6.col-md-6.col-sm-12.col-xs-12
+            .col-lg-4.col-md-6.col-sm-12.col-xs-12
               a(href="https://www.linkedin.com/mwlite/in/vnadoda" target="_blank") 
                 .team-card
                   //- Team member image | Vip
@@ -42,7 +42,7 @@ html
             //- Team member ends | Vip
 
             //- Team member starts | Tai
-            .col-lg-6.col-md-6.col-sm-12.col-xs-12
+            .col-lg-4.col-md-6.col-sm-12.col-xs-12
               a(href="https://www.linkedin.com/in/taisuke-mino-1529801b4/" target="_blank") 
                 .team-card
                   //- Team member image | Tai
@@ -53,6 +53,19 @@ html
                     p.name Tai
                     p.designation Co-Founder and the CEO
             //- Team member ends | Tai
+
+            //- Team member starts | Asif Ali Khan
+            .col-lg-4.col-md-6.col-sm-12.col-xs-12
+              a(href="https://www.linkedin.com/in/aakhan0410" target="_blank") 
+                .team-card
+                  //- Team member image | Asif
+                  .team-member-img
+                    img(src="./assets/img/team/asif.jpeg", alt="")
+                  //- Team member description | Asif
+                  .team-member-desc
+                    p.name Asif Ali Khan
+                    p.designation Full Stack Developer
+            //- Team member ends | Asif Ali Khan
 
     //- Team section ends here
 
